--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.5"
+  },
+  "dependencies": {
+    "animejs": "^3.2.1"
   }
 }
